--- a/Pickin/Pages/Shared/_Footer.cshtml
+++ b/Pickin/Pages/Shared/_Footer.cshtml
@@ -3,6 +3,6 @@
         Example text
     </div>*@
     <div>
-        <strong>Copyright</strong> Pickin &copy; 2018 - 2020
+        <strong>Copyright</strong> Pickin &copy; @DateTime.Now.Year
     </div>
 </div>
