--- a/Pickin/Pages/Shared/_LoginPartial.cshtml
+++ b/Pickin/Pages/Shared/_LoginPartial.cshtml
@@ -24,7 +24,7 @@
                 </div>
             @*</cache>*@
         </li>
-        <li class="nav-item" style="margin-top: -3px; margin-left: 40px">
+        <li class="nav-item" style="margin-left: 40px">
             <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
                 <button type="submit" class="nav-link btn btn-link text-dark"><i class="fa fa-sign-out"></i> Log out</button>
             </form>
