--- a/Pickin/Pages/Shared/_Navigation.cshtml
+++ b/Pickin/Pages/Shared/_Navigation.cshtml
@@ -10,11 +10,14 @@
         <ul class="nav" id="side-menu">
             <li class="nav-header">
                 <div class="dropdown profile-element">
-                    <cache vary-by-user="true">
-                        <div>
-                            <img src="@Url.Page("/ImageCompany", new { id = User.FindFirst("EmpresaId").Value })" object-fit: contain; width="100%" height="100%" />
-                        </div>
-                    </cache>
+                    @if (User.FindFirst("EmpresaId") != null)
+                    {
+                        <cache vary-by-user="true">
+                            <div>
+                                <img src="@Url.Page("/ImageCompany", new { id = User.FindFirst("EmpresaId").Value })" object-fit: contain; width="100%" height="100%" />
+                            </div>
+                        </cache>
+                    }
                 </div>
             </li>
 
