--- a/Pickin/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Pickin/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -18,7 +18,7 @@
             <div class="text-center">
                 @if (Model.Empresa.Image != null)
                 {
-                    <h1 class="logo-name"><img src="data:image/jpg;base64,@Convert.ToBase64String(Model.Empresa.Image)" /></h1>
+                    <h1 class="logo-name"><img src="data:image/jpg;base64,@Convert.ToBase64String(Model.Empresa.Image)" width="150px"/></h1>
                 }
                 else
                 {
