--- a/Pickin/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Pickin/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -18,7 +18,7 @@
             <div class="text-center">
                 @if (Model.EmpresaImage != null)
                 {
-                    <h1 class="logo-name"><img src="data:image/jpg;base64,@Convert.ToBase64String(Model.EmpresaImage)" /></h1>
+                    <h1 class="logo-name"><img src="data:image/jpg;base64,@Convert.ToBase64String(Model.EmpresaImage)" width="150px"/></h1>
                 }
                 else
                 {
